@@ -1,3 +1,3 @@
 F90EXE_sources += eos.F90
-f90EXE_sources += eos_type.f90
+F90EXE_sources += eos_type.F90
 F90EXE_sources += eos_override.F90
